--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Tartu ühikad</h1> 
+   
+    <h1>Tartu ühikad</h1> 
+    <div class="button-container">
+        <a class="button" href="https://www.youtube.com">Go to Youtube</a>
+        <a class="button" href="https://www.google.com">Go to Google</a>
+    </div>
+
 </body>
 </html>
