--- a/tu_uhikad.html
+++ b/tu_uhikad.html
@@ -11,20 +11,13 @@
    <p>See lehekülg tutvustab Tartu ülikooli ühiselamuid. TÜ endal on 7 ühikat ning hetkel on renoveerimisel ka kaheksas.</p>
    <h2>Nimekiri kõikidest ühiselamutest:</h2>
    <ol>
-        <li>Raatuse 22</li>
-        <img src="raatuse.png" alt="Raatuse ühiselamu">
-        <li>Narva mnt 25</li>
-        <img src="narva25.png" alt="Narva maantee 25 ühiselamu">
-        <li>Narva mnt 27</li>
-        <img src="narva27.png" alt="Narva maantee 27 ühiselamu">
-        <li>Narva mnt 89</li>
-        <img src="narva89.png" alt="Narva maantee 89 ühiselamu">
-        <li>Purde 27</li>
-        <img src="purde27.png" alt="Purde 27 ühiselamu">
-        <li>Pepleri 14</li>
-        <img src="pepleri14.png" alt="Pepleri 14 ühiselamu">
-        <li>Tiigi 14</li>
-        <img src="tiigi14.png" alt="Tiigi 14 ühiselamu">
+        <li>Raatuse 22<img src="raatuse.png" alt="Raatuse ühiselamu"></li>
+        <li>Narva mnt 25<img src="narva25.png" alt="Narva maantee 25 ühiselamu"></li>
+        <li>Narva mnt 27<img src="narva27.png" alt="Narva maantee 27 ühiselamu"></li>
+        <li>Narva mnt 89<img src="narva89.png" alt="Narva maantee 89 ühiselamu"></li>
+        <li>Purde 27<img src="purde27.png" alt="Purde 27 ühiselamu"></li>
+        <li>Pepleri 14<img src="pepleri14.png" alt="Pepleri 14 ühiselamu"></li>
+        <li>Tiigi 14<img src="tiigi14.png" alt="Tiigi 14 ühiselamu"></li>
         <li>Nooruse 7 - renoveerimisel!</li>
    </ol>
 </body>
