--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
-    <div class="header">
-        <h1>Tartu ühikad</h1>
+    <header>
+        <div class="header_nupp_ja_tekst">
+            <a href="Tartu_ühikad.html" class="kodunupp"><i class="fas fa-home"></i></a>
+            <h1>Tartu ühikad</h1>
+        </div>
         <div class="button-container1">
             <a class="header-button" href="https://www.youtube.com">Vaheleht 1</a>
             <a class="header-button" href="https://www.google.com">Vaheleht 2</a>
         </div>
-    </div>
-    
+    </header>
+
     <div class="button-and-map-container">
         <div id="map-container">
             <iframe id="locationMap" class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2091.4744972843464!2d26.722176412337006!3d58.38539888610982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eb37b2e8a6ef3d%3A0xb1c21ea409a3845f!2sTartu%20%C3%9Clikooli%20Delta%20keskus!5e0!3m2!1set!2see!4v1699810918712!5m2!1set!2see"></iframe>
