progress (loetavus ja map locations)

--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -11,13 +11,13 @@
 
 <body>
     <header>
-        <div class="header_nupp_ja_tekst">
+        <div class="header_kodunupp_ja_pealkiri">
             <a href="Tartu_ühikad.html" class="kodunupp"><i class="fas fa-home"></i></a>
             <h1>Tartu ühikad</h1>
         </div>
-        <div class="button-container1">
-            <a class="header-button" href="https://www.youtube.com">Vaheleht 1</a>
-            <a class="header-button" href="https://www.google.com">Vaheleht 2</a>
+        <div class="header-vahelehe-nuppud">
+            <a class="header-nupp" href="tu_uhikad.html">TÜ ühikad</a>
+            <a class="header-nupp" href="https://www.google.com">Vaheleht 2</a>
         </div>
     </header>
 
@@ -27,16 +27,14 @@
         </div>
 
         <div class="button-container2">
-            <button class="map-button" onclick="switchLocation(0)">Delta</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">pikksadfsdlfjlsdfjlksdjlfjsldkfjlksdfjklsdjklfjsdklfj</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
-            <button class="map-button" onclick="switchLocation(1)">Konsum</button>
+            <button class="map-button" onclick="switchLocation(0)">Raatuse 22</button>
+            <button class="map-button" onclick="switchLocation(1)">Purde 27</button>
+            <button class="map-button" onclick="switchLocation(2)">Narva mnt 25</button>
+            <button class="map-button" onclick="switchLocation(3)">Pepleri 14</button>
+            <button class="map-button" onclick="switchLocation(4)">Narva mnt 27</button>
+            <button class="map-button" onclick="switchLocation(5)">Tiigi 14</button>
+            <button class="map-button" onclick="switchLocation(6)">Narva mnt 89</button>
+            <button class="map-button" onclick="switchLocation(7)">Nooruse 7</button>
         </div>
         <script src="kaardi_nuppud.js" defer></script>
     </div>
