--- a/Muudühikad.html
+++ b/Muudühikad.html
@@ -18,7 +18,10 @@
                 <h4>Tartu Tervishoiu Kõrgkool</h4>
                 <ul>
                     <li>Nooruse 5</li>
-                    <li></li>
+                    <li>Suur/väike kahekohaline terve tuba</li>
+                    <li>66/53€ / inimene kuus</li>
+                    <li>Email: enelinnok@nooruse.ee</li>
+                    <li><a href="https://www.nooruse.ee/oppimine/uhiselamu/majutus-uhiselamus/">Uuri lisaks</a></li>
                 </ul>
             </div>
         </div>
@@ -28,7 +31,11 @@
                 <h4>Tartu Rakenduslik Kolledž</h4>
                 <ul>
                     <li>Kopli 1C</li>
-                    <li></li>
+                    <li>Kohti: 387</li>
+                    <li>Suured kahe/kolmekohalised toad</li>
+                    <li>65€ / inimene kuus</li>
+                    <li>mail: info@voco.ee</li>
+                    <li><a href="https://voco.ee/koolielu/opilaskodu/kopli-1c/">Uuri lisaks</a></li>
                 </ul>
             </div>
         </div>
@@ -38,7 +45,11 @@
                 <h4>Tartu Rakenduslik Kolledž</h4>
                 <ul>
                     <li>Põllu 11C</li>
-                    <li></li>
+                    <li>Kohti: 226</li>
+                    <li>Suured kahe/kolmekohalised toad</li>
+                    <li>55€ / inimene kuus</li>
+                    <li>Email: info@voco.ee</li>
+                    <li><a href="https://voco.ee/koolielu/opilaskodu/pollu-11c/">Uuri lisaks</a></li>
                 </ul>
             </div>
         </div>
@@ -48,7 +59,10 @@
                 <h2>EMÜ Torni ühiselamu</h2>
                 <ul>
                     <li>Kreutzwaldi52</li>
-                    <li></li>
+                    <li>Ühe/kahekohalised toad</li>
+                    <li>180€/142€ / inimene kuus</li>
+                    <li>Email: kylliki.aavast@emu.ee</li>
+                    <li><a href="https://dorm.emu.ee/elanikule/">Uuri lisaks</a></li>
                 </ul>
             </div>
         </div>
@@ -58,7 +72,10 @@
                 <h4>EMÜ Bettoni ühiselamu</h4>
                 <ul>
                     <li>Friedebert Tuglase 7</li>
-                    <li></li>
+                    <li>Ühe/kahekohalised toad</li>
+                    <li>165/126€ / inimene kuus</li>
+                    <li>Email: piret.kytt@emu.ee</li>
+                    <li><a href="https://dorm.emu.ee/elanikule/">Uuri lisaks</a></li>
                 </ul>
             </div>
         </div>
@@ -68,57 +85,14 @@
                 <h4>Tartu Downtown Hostel</h4>
                 <ul>
                     <li>Raatuse 22</li>
-                    <li></li>
+                    <li>Kahekohalised toad</li>
+                    <li>35€ / inimene öö
+                    <li>40€ / 2 inimest öö</li>
+                    <li>Email: downtown@campus.ee</li>
+                    <li><a href="https://tartuhostel.ee/en/">Uuri lisaks</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div id="map" style="height: 400px;"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7Fii7rFXzuVReVJX8R9qv5fLo6hgSOXo&callback=initMap" async defer></script>
-
-    <script>
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: 58.380602, lng: 26.729870},
-                zoom: 12
-            });
-
-            var marker1 = new google.maps.Marker({
-                position: {lat: 58.380602, lng: 26.729870},
-                map: map,
-                title: 'Tartu Tervishoiu Kõrgkool'
-            });
-
-            var marker2 = new google.maps.Marker({
-                position: {lat: 58.383066, lng: 26.717032},
-                map: map,
-                title: 'Tartu Rakenduslik Kolledž Kopli'
-            });
-
-            var marker3 = new google.maps.Marker({
-                position: {lat: 58.372944, lng: 26.721962},
-                map: map,
-                title: 'Tartu Rakenduslik Kolledž Põllu'
-            });
-
-            var marker4 = new google.maps.Marker({
-                position: {lat: 58.375727, lng: 26.720481},
-                map: map,
-                title: 'EMÜ Torni ühiselamu'
-            });
-
-            var marker5 = new google.maps.Marker({
-                position: {lat: 58.385698, lng: 26.720912},
-                map: map,
-                title: 'EMÜ Bettoni ühiselamu'
-            });
-
-            var marker6 = new google.maps.Marker({
-                position: {lat: 58.378592, lng: 26.722775},
-                map: map,
-                title: 'Tartu Downtown Hostel'
-            });
-        }
-    </script>
 </body>
 </html>
