--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -76,22 +76,29 @@
                     <h3 id="hindl">hind</h3>
                 </div>
             </div>
-        </div> 
-        <div class="vorreldavr">
-            <div class="nuppudr">
-                <button class="vordlusnuppud" onclick="nimir('Ühikas3'); hindr('3 eur')">Button 3</button>
-                <button class="vordlusnuppud" onclick="nimir('Ühikas4'); hindr('4 eur')">Button 4</button>
-            </div>
-            <div class="teksti_hoidik">
-                <div>
-                    <p id="nimir">nimi</p>
-                    <p id="hindr">hind</p>
+
+            <h1>VS</h1>
+            
+            <div class="vorreldavr">                
+                <div class="teksti-hoidik">
+                    <h2 id="nimir">nimi</h2>
+                    <h3 id="hindr">hind</h3>
+                </div>
+
+                <div class="nuppudr">
+                    <button class="vordlusnuppud" onclick="nimir('Raatuse 22'); hindr('144.50€-289€')">Raatuse 22</button>
+                    <button class="vordlusnuppud" onclick="nimir('Purde 27'); hindr('70€-246€')">Purde 27</button>
+                    <button class="vordlusnuppud" onclick="nimir('Narva mnt 25'); hindr('144.50€-302€')">Narva mnt 25</button>
+                    <button class="vordlusnuppud" onclick="nimir('Pepleri 14'); hindr('144€-405€')">Pepleri 14</button>
+                    <button class="vordlusnuppud" onclick="nimir('Narva mnt 27'); hindr('144.50€-316€')">Narva mnt 27</button>
+                    <button class="vordlusnuppud" onclick="nimir('Tiigi 14'); hindr('133€-266€')">Tiigi 14</button>
+                    <button class="vordlusnuppud" onclick="nimir('Narva mnt 89'); hindr('75.50€-149€')">Narva mnt 89</button>
+                    <button class="vordlusnuppud" onclick="nimir('Nooruse 7'); hindr('renoveerimisel')">Nooruse 7</button>
                 </div>
             </div>
         </div>
     </div>
-
-    
+    <script src="nuppud.js" defer></script>
 </body>
 
 </html>
