teine avalehe nupp töötab

--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header-vahelehe-nuppud">
             <a class="header-nupp" href="tu_uhikad.html">TÜ ühikad</a>
-            <a class="header-nupp" href="https://www.google.com">Vaheleht 2</a>
+            <a class="header-nupp" href="Muudühikad.html">Muud ühikad</a>
         </div>
     </header>
 
