lisasin muude ühikate mapid

--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -42,14 +42,12 @@
             </div>
             <div class="muude-ühikate-nuppud">
                 <h1>muud ühikad</h1>
-                <button class="map-button" onclick="switchLocation(8)"></button>
-                <button class="map-button" onclick="switchLocation(9)"></button>
-                <button class="map-button" onclick="switchLocation(10)"></button>
-                <button class="map-button" onclick="switchLocation(11)"></button>
-                <button class="map-button" onclick="switchLocation(12)"></button>
-                <button class="map-button" onclick="switchLocation(13)"></button>
-                <button class="map-button" onclick="switchLocation(14)"></button>
-                <button class="map-button" onclick="switchLocation(15)"></button>
+                <button class="map-button" onclick="switchLocation(8)">Tartu Tervishoiu Kõrgkool - Nooruse 5</button>
+                <button class="map-button" onclick="switchLocation(9)">Tartu Rakenduslik Kolledž - Kopli 1C</button>
+                <button class="map-button" onclick="switchLocation(10)">Tartu Rakenduslik Kolledž - Põllu 11C</button>
+                <button class="map-button" onclick="switchLocation(11)">EMÜ Torn - Kreutzwaldi 52</button>
+                <button class="map-button" onclick="switchLocation(12)">EMÜ Bettoni ühiselamu - Friedebert Tuglase 7</button>
+                <button class="map-button" onclick="switchLocation(13)">Tartu Downtown Hostel - Raatuse 22</button>
             </div>
         </div>
     </div>
