võrdluselemendi muud ühikad

--- a/Tartu_ühikad.html
+++ b/Tartu_ühikad.html
@@ -42,12 +42,12 @@
             </div>
             <div class="muude-ühikate-nuppud">
                 <h1>muud ühikad</h1>
-                <button class="map-button" onclick="switchLocation(8)">Tartu Tervishoiu Kõrgkool - Nooruse 5</button>
-                <button class="map-button" onclick="switchLocation(9)">Tartu Rakenduslik Kolledž - Kopli 1C</button>
-                <button class="map-button" onclick="switchLocation(10)">Tartu Rakenduslik Kolledž - Põllu 11C</button>
-                <button class="map-button" onclick="switchLocation(11)">EMÜ Torn - Kreutzwaldi 52</button>
-                <button class="map-button" onclick="switchLocation(12)">EMÜ Bettoni ühiselamu - Friedebert Tuglase 7</button>
-                <button class="map-button" onclick="switchLocation(13)">Tartu Downtown Hostel - Raatuse 22</button>
+                <button class="map-button" onclick="switchLocation(8)">Tervishoiu Kõrgkool</button>
+                <button class="map-button" onclick="switchLocation(11)">EMÜ Torn</button>
+                <button class="map-button" onclick="switchLocation(9)">Rakenduslik Kolledž - Kopli 1C</button>
+                <button class="map-button" onclick="switchLocation(10)">Rakenduslik Kolledž - Põllu 11C</button>
+                <button class="map-button" onclick="switchLocation(12)">EMÜ Betton</button>
+                <button class="map-button" onclick="switchLocation(13)">Downtown Hostel</button>
             </div>
         </div>
     </div>
@@ -59,14 +59,21 @@
         <div class="vordluselemendi-pohisisu">
             <div class="vorreldavl">                
                 <div class="nuppudl">
-                    <button class="vordlusnuppud" onclick="nimil('Raatuse 22'); hindl('144.50€-289€')">Raatuse 22</button>
-                    <button class="vordlusnuppud" onclick="nimil('Purde 27'); hindl('70€-246€')">Purde 27</button>
-                    <button class="vordlusnuppud" onclick="nimil('Narva mnt 25'); hindl('144.50€-302€')">Narva mnt 25</button>
-                    <button class="vordlusnuppud" onclick="nimil('Pepleri 14'); hindl('144€-405€')">Pepleri 14</button>
-                    <button class="vordlusnuppud" onclick="nimil('Narva mnt 27'); hindl('144.50€-316€')">Narva mnt 27</button>
-                    <button class="vordlusnuppud" onclick="nimil('Tiigi 14'); hindl('133€-266€')">Tiigi 14</button>
-                    <button class="vordlusnuppud" onclick="nimil('Narva mnt 89'); hindl('75.50€-149€')">Narva mnt 89</button>
-                    <button class="vordlusnuppud" onclick="nimil('Nooruse 7'); hindl('renoveerimisel')">Nooruse 7</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Raatuse 22'); hindl('144.50€-289€')">TÜ Raatuse 22</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Purde 27'); hindl('70€-246€')">TÜ Purde 27</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Narva mnt 25'); hindl('144.50€-302€')">TÜ Narva mnt 25</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Pepleri 14'); hindl('144€-405€')">TÜ Pepleri 14</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Narva mnt 27'); hindl('144.50€-316€')">TÜ Narva mnt 27</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Tiigi 14'); hindl('133€-266€')">TÜ Tiigi 14</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Narva mnt 89'); hindl('75.50€-149€')">TÜ Narva mnt 89</button>
+                    <button class="vordlusnuppud" onclick="nimil('TÜ Nooruse 7'); hindl('renoveerimisel')">TÜ Nooruse 7</button>
+                    <button class="vordlusnuppud" onclick="nimil('Tervishoiu Kõrgkool'); hindl('53€-66€')">Tervishoiu Kõrgkool</button>
+                    <button class="vordlusnuppud" onclick="nimil('Rakenduslik Kolledž (Kopli)'); hindl('65€')">Rakenduslik Kolledž (Kopli)</button>
+                    <button class="vordlusnuppud" onclick="nimil('Rakenduslik Kolledž (Põllu)'); hindl('55€')">Rakenduslik Kolledž (Põllu)</button>
+                    <button class="vordlusnuppud" onclick="nimil('EMÜ Torn'); hindl('142€-180€')">EMÜ Torn</button>
+                    <button class="vordlusnuppud" onclick="nimil('EMÜ Betton'); hindl('126€-165€')">EMÜ Betton</button>
+                    <button class="vordlusnuppud" onclick="nimil('Downtown Hostel'); hindl('35€ öö (1050 kuu)')">Downtown Hostel</button>
+
                 </div>
                 
                 <div class="teksti-hoidik">
@@ -84,14 +91,20 @@
                 </div>
 
                 <div class="nuppudr">
-                    <button class="vordlusnuppud" onclick="nimir('Raatuse 22'); hindr('144.50€-289€')">Raatuse 22</button>
-                    <button class="vordlusnuppud" onclick="nimir('Purde 27'); hindr('70€-246€')">Purde 27</button>
-                    <button class="vordlusnuppud" onclick="nimir('Narva mnt 25'); hindr('144.50€-302€')">Narva mnt 25</button>
-                    <button class="vordlusnuppud" onclick="nimir('Pepleri 14'); hindr('144€-405€')">Pepleri 14</button>
-                    <button class="vordlusnuppud" onclick="nimir('Narva mnt 27'); hindr('144.50€-316€')">Narva mnt 27</button>
-                    <button class="vordlusnuppud" onclick="nimir('Tiigi 14'); hindr('133€-266€')">Tiigi 14</button>
-                    <button class="vordlusnuppud" onclick="nimir('Narva mnt 89'); hindr('75.50€-149€')">Narva mnt 89</button>
-                    <button class="vordlusnuppud" onclick="nimir('Nooruse 7'); hindr('renoveerimisel')">Nooruse 7</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Raatuse 22'); hindr('144.50€-289€')">TÜ Raatuse 22</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Purde 27'); hindr('70€-246€')">TÜ Purde 27</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Narva mnt 25'); hindr('144.50€-302€')">TÜ Narva mnt 25</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Pepleri 14'); hindr('144€-405€')">TÜ Pepleri 14</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Narva mnt 27'); hindr('144.50€-316€')">TÜ Narva mnt 27</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Tiigi 14'); hindr('133€-266€')">TÜ Tiigi 14</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Narva mnt 89'); hindr('75.50€-149€')">TÜ Narva mnt 89</button>
+                    <button class="vordlusnuppud" onclick="nimir('TÜ Nooruse 7'); hindr('renoveerimisel')">TÜ Nooruse 7</button>
+                    <button class="vordlusnuppud" onclick="nimir('Tervishoiu Kõrgkool'); hindr('53€-66€')">Tervishoiu Kõrgkool</button>
+                    <button class="vordlusnuppud" onclick="nimir('Rakenduslik Kolledž (Kopli)'); hindr('65€')">Rakenduslik Kolledž (Kopli)</button>
+                    <button class="vordlusnuppud" onclick="nimir('Rakenduslik Kolledž (Põllu)'); hindr('55€')">Rakenduslik Kolledž (Põllu)</button>
+                    <button class="vordlusnuppud" onclick="nimir('EMÜ Torn'); hindr('142€-180€')">EMÜ Torn</button>
+                    <button class="vordlusnuppud" onclick="nimir('EMÜ Betton'); hindr('126€-165€')">EMÜ Betton</button>
+                    <button class="vordlusnuppud" onclick="nimir('Downtown Hostel'); hindr('35€ öö (1050 kuu)')">Downtown Hostel</button>
                 </div>
             </div>
         </div>
