--- a/Muudühikad.html
+++ b/Muudühikad.html
@@ -6,8 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Muud ühikad</title>
+    <link rel="stylesheet" href="Main_style.css">
     <link rel="stylesheet" href="Muudühikad.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
 </head>
+<header>
+    <div class="header_kodunupp_ja_pealkiri">
+        <a href="Avaleht.html" class="kodunupp"><i class="fas fa-home"></i></a>
+        <h1 class="header-h1">Tartu ühikad</h1>
+    </div>
+    <div class="header-vahelehe-nuppud">
+        <a class="header-nupp" href="tu_uhikad.html">TÜ ühikad</a>
+        <a class="header-nupp" href="Muudühikad.html">Muud ühikad</a>
+    </div>
+</header>
 <body>
     <h1>MUUD ÜHIKAD</h1>
     <div class="image-container">
