--- a/tu_uhikad.html
+++ b/tu_uhikad.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ee">
 <head>
     <link rel="stylesheet" type="text/css" href="tu_uhikad.css">
+    <link rel="stylesheet" href="Main_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    <div class="header_kodunupp_ja_pealkiri">
+        <a href="Avaleht.html" class="kodunupp"><i class="fas fa-home"></i></a>
+        <h1 class="header-h1">Tartu ühikad</h1>
+    </div>
+    <div class="header-vahelehe-nuppud">
+        <a class="header-nupp" href="tu_uhikad.html">TÜ ühikad</a>
+        <a class="header-nupp" href="Muudühikad.html">Muud ühikad</a>
+    </div>
+</header>
 <body>
-   <h1>Tartu ülikooli ühikad</h1> 
-   <p>See lehekülg tutvustab Tartu ülikooli ühiselamuid. TÜ endal on 7 ühikat ning hetkel on renoveerimisel ka kaheksas.</p>
-   <div class="wrapper">
+    <h1>Tartu ülikooli ühikad</h1> 
+    <p>See lehekülg tutvustab Tartu ülikooli ühiselamuid. TÜ endal on 7 ühikat ning hetkel on renoveerimisel ka kaheksas.</p>
+    <div class="wrapper">
         <div class="row">
             <h2>Raatuse 22</h2>
             <ul>
@@ -76,6 +88,6 @@
             <h2>Nooruse 7 - renoveerimisel!</h2>
         </div>
     </div> 
-    <a href="https://www.campus.ee/elamud/" target="_blank">Põhjalikum info Tartu Ülikooli ühiselamutest.</a>       
+    <a href="https://www.campus.ee/elamud/" target="_blank">Põhjalikum info Tartu Ülikooli ühiselamutest.</a>   
 </body>
 </html>
