--- a/Avaleht.html
+++ b/Avaleht.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ee">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Main_style.css">
+    <link rel="stylesheet" href="Avaleht.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
+<header>
+    <div class="header_kodunupp_ja_pealkiri">
+        <a href="Avaleht.html" class="kodunupp"><i class="fas fa-home"></i></a>
+        <h1 class="header-h1">Tartu ühikad</h1>
+    </div>
+    <div class="header-vahelehe-nuppud">
+        <a class="header-nupp" href="tu_uhikad.html">TÜ ühikad</a>
+        <a class="header-nupp" href="Muudühikad.html">Muud ühikad</a>
+    </div>
+</header>
+
 <body>
-    <header>
-        <div class="header_kodunupp_ja_pealkiri">
-            <a href="Tartu_ühikad.html" class="kodunupp"><i class="fas fa-home"></i></a>
-            <h1 class="header-h1">Tartu ühikad</h1>
-        </div>
-        <div class="header-vahelehe-nuppud">
-            <a class="header-nupp" href="tu_uhikad.html">TÜ ühikad</a>
-            <a class="header-nupp" href="Muudühikad.html">Muud ühikad</a>
-        </div>
-    </header>
-
-
-
     <div class="button-and-map-container">
         <div id="map-container">
             <iframe id="locationMap" class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2091.4744972843464!2d26.722176412337006!3d58.38539888610982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eb37b2e8a6ef3d%3A0xb1c21ea409a3845f!2sTartu%20%C3%9Clikooli%20Delta%20keskus!5e0!3m2!1set!2see!4v1699810918712!5m2!1set!2see"></iframe>
