--- a/Avaleht.html
+++ b/Avaleht.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tartu-ühiad</title>
+    <title>Tartu-ühikad</title>
     <link rel="stylesheet" href="Main_style.css">
     <link rel="stylesheet" href="Avaleht.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
